# new_app_django

./: README.md  categories_fixture.json  products_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_title.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_catalogs.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py
catalog/templates/: base.html  contacts.html  home.html  menu.html  product_detail.html  product_form.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
config/: settings.py  urls.py
